# gigabroom

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
src/: cache.rs  cleaner.rs  cli.rs  display.rs  main.rs  menu.rs  scanner.rs  types.rs  ui.rs  utils.rs
